syntax = "proto3";

package login;

import "proto/role.proto";

// 客户端请求登录
message CSReqLogin {
    int32 Account       = 1; // 账号
    string Passwword    = 2; // 密码
}
// 服务端回复登录
message CSRspLogin {
    bool Result     = 1; // 登录结果
    int32 ErrorCode = 2; // 错误码(如有)
}

// 客户端请求注册
message CSReqRegister {
    int32 Account       = 1; // 账号
    string Passwword    = 2; // 密码
}
// 服务端回复注册
message CSRspRegister {
    bool Result     = 1; // 注册结果
    int32 ErrorCode = 2; // 错误码(如有)
}

// 客户端请求版本一致性检查
message CSReqVersionCheck {
    string Code = 1;
}
// 服务端回复版本一致性检查
message CSRspVersionCheck {
    int32 ErrorCode = 1;
}

// 客户端请求拥有角色选角简介列表
message CSReqOwnerRoleSelectIntroList {
    int32 Account = 1;
}
// 服务端回复拥有角色选角简介列表
message CSRspOwnerRoleSelectIntroList {
    int32 ErrorCode                         = 1;
    repeated role.RoleSelectIntro IntroList = 2;
}

// 客户端请求创建角色
message CSReqCreateRole {
    int32 Account               = 1;
    role.RoleCreateInfo Info    = 2;
}
// 服务端回复创建角色
message CSRspCreateRole {
    int32 ErrorCode = 1;
}

// 客户端请求选择角色
message CSReqSelectRole {
    int32 Account   = 1;
    int32 RoleId    = 2;
}
// 服务端回复选择角色
message CSRspSelectRole {
    int32 ErrorCode = 1;
}

// 网关服务器协议
message LoginMsg {
    oneof Data {
        // Anonym
        CSReqLogin CSReqLogin               = 10001;
        CSRspLogin CSRspLogin               = 10002;
        CSReqRegister CSReqRegister         = 10003;
        CSRspRegister CSRspRegister         = 10004;
        CSReqVersionCheck CSReqVersionCheck = 10005;
        CSRspVersionCheck CSRspVersionCheck = 10006;
        // SelectRole
        CSReqOwnerRoleSelectIntroList CSReqOwnerRoleSelectIntroList = 10101;
        CSRspOwnerRoleSelectIntroList CSRspOwnerRoleSelectIntroList = 10102;
        CSReqCreateRole CSReqCreateRole = 10103;
        CSRspCreateRole CSRspCreateRole = 10104;
        CSReqSelectRole CSReqSelectRole = 10105;
        CSRspSelectRole CSRspSelectRole = 10106;
    }
}